# macblock

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cliff.toml  justfile  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md  REPO_AUDIT_REPORT.md  UNINSTALL.md
scripts/: bootstrap.sh  dev_install.sh  release.sh
src/macblock/: __init__.py  blocklists.py  cli.py  colors.py  constants.py  control.py  daemon.py  dns_test.py  dnsmasq.py  doctor.py  exec.py  help.py  install.py  launchd.py  lists.py  logs.py  pf.py  state.py  status.py  system_dns.py  templates.py  ui.py  users.py
src/macblock/templates/: apply_state.py  apply_state.py.tmpl  launchd-dnsmasq.plist  launchd-macblockd.plist  launchd-resume.plist  macblockd.py.tmpl  pf-anchor.conf  pf_apply.py  resume_helper.py  update_upstreams.py.tmpl
tests/: test_blocklists.py  test_cli.py  test_daemon.py  test_install.py  test_pf.py  test_resolvers.py  test_state.py
