[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macblock"
version = "0.2.0"
description = "Local DNS sinkhole for macOS using dnsmasq"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "macblock contributors" }]
keywords = ["dns", "ad-blocker", "dnsmasq", "macos"]
dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.8.0",
  "pyright>=1.1.390",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pre-commit>=3.7.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[project.scripts]
macblock = "macblock.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
extraPaths = ["src"]
